--- a/src/style.scss
+++ b/src/style.scss
@@ -4,11 +4,11 @@
 @import url("https://fonts.googleapis.com/css?family=Lobster:regular&display=swap");
 
 body {
-	height: 400px;
-	width: 600px;
-	@apply font-lobster
+  height: 600px;
+  width: 600px;
+  @apply font-lobster;
 }
 #root-pomadoro-extension {
-	height: 100%;
-	width: 100%;
+  height: 100%;
+  width: 100%;
 }
