--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -27,7 +27,7 @@
   @apply bg-iconHover;
 }
 .sidebar {
-  @apply flex-grow flex flex-col p-4;
+  @apply flex grow flex-col p-4;
 }
 .head {
   @apply flex justify-between items-center border-b
@@ -40,5 +40,5 @@
   @apply cursor-pointer text-lg;
 }
 .body {
-  @apply grow mt-4;
+  @apply mt-4;
 }
